# APP4RS-Milestone1

./: .gitignore  main.py  pyproject.toml
creating_splits_for_dl/: create_splits.py
tests/: test_geo_parquet_operations.py  test_tabular_operations.py
working_with_geospatial_vector_data/: geo_parquet_operations.py
working_with_remote_sensing_images/: image_operations.py
working_with_tabular_data/: tabular_operations.py
